--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,11 +7,12 @@ html, body {
     height: 100% !important;
     padding: 0 !important;
     margin: 0 !important;
+    font-family: "Muli", sans-serif;
 }
-.input:focus {
-    /*outline: none !important;*/
-   /* border:1px solid red;*/
-    box-shadow: 0 0 10px #719ECE;
+
+.gradientBg{
+    background: rgb(34,195,158);
+    background: linear-gradient(25deg, rgba(34,195,158,1) 0%, rgba(196,253,45,1) 100%);
 }
 .wrapper {
     box-sizing: border-box!important;
@@ -26,10 +27,19 @@ html, body {
 .page-body {
     flex-grow: 1;
 }
-
-main {
-    /*width: 400px;
-    border: solid 1px;*/
-    margin-top: 100px;
+.sticky {
+    color: black;
+    position: fixed;
+    z-index: 99;
+    background-color: rgba(255, 255, 255, 0.8);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    -webkit-box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+    -webkit-transition: all 0.3s ease-out 0s;
+    transition: all 0.3s ease-out 0s;
 }
+
+
+
 
