--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -51,6 +51,13 @@ h1, h2 {
     text-align: center;
 }
 
+.text-hidden{
+    opacity: 0;
+    transition: all 1.5s;
+}
+.show{
+    opacity: 1;
+}
 
 
 
