--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,8 @@ html, body {
     height: 100% !important;
     padding: 0 !important;
     margin: 0 !important;
-    font-family: Trebuchet MS, serif;
+    font-family: Georgia , serif;
+    scroll-behavior: smooth;
 }
 
 
